@@ -1,3 +1,8 @@
+2010-07-21  Bernd Schmidt  <bernds@codesourcery.com>
+
+	PR middle-end/44738
+	* c-c++-common/uninit-17.c: Correct expected error.
+
 2010-07-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/guality/asm-1.c: New test.
